// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render component 1`] = `
<div
  className="page-action-bar"
>
  <div
    className="gf-form gf-form--grow"
  >
    <FilterInput
      onChange={[MockFunction]}
      placeholder="Search user by login, email or name"
      value=""
    />
  </div>
</div>
`;

exports[`Render should render pending invites button 1`] = `
<div
  className="page-action-bar"
>
  <div
    className="gf-form gf-form--grow"
  >
    <FilterInput
      onChange={[MockFunction]}
      placeholder="Search user by login, email or name"
      value=""
    />
  </div>
  <div
    style={
      Object {
        "marginLeft": "1rem",
      }
    }
  >
    <RadioButtonGroup
      onChange={[MockFunction]}
      options={
        Array [
          Object {
            "label": "Users",
            "value": "users",
          },
          Object {
            "label": "Pending Invites (5)",
            "value": "invites",
          },
        ]
      }
      value="users"
    />
  </div>
</div>
`;

exports[`Render should show external user management button 1`] = `
<div
  className="page-action-bar"
>
  <div
    className="gf-form gf-form--grow"
  >
    <FilterInput
      onChange={[MockFunction]}
      placeholder="Search user by login, email or name"
      value=""
    />
  </div>
  <LinkButton
    href="some/url"
    rel="noopener"
    target="_blank"
  />
</div>
`;

exports[`Render should show invite button 1`] = `
<div
  className="page-action-bar"
>
  <div
    className="gf-form gf-form--grow"
  >
    <FilterInput
      onChange={[MockFunction]}
      placeholder="Search user by login, email or name"
      value=""
    />
  </div>
  <LinkButton
    href="org/users/invite"
  >
    Invite
  </LinkButton>
</div>
`;
